Update contact information and add new testimonials

--- a/index.html
+++ b/index.html
@@ -181,11 +181,14 @@
                 </div>
 
                 <div class="quick-cards">
-                    <div class="mini">🏠 PG Finder <div class="muted">Verified listings</div>
+                    <div class="mini"><a href="stay.html" class="tag" style="text-decoration: none;">🏠 PG & Flat Finder</a>
+                        <div class="muted"></div>
                     </div>
-                    <div class="mini">🍱 Meal Plans <div class="muted">Weekly & monthly</div>
+                    <div class="mini"><a href="meals.html" class="tag" style="text-decoration: none;">🍱 Healthy Meal Plans</a>
+                        <div class="muted"></div>
                     </div>
-                    <div class="mini">👕 Laundry <div class="muted">Pickup & delivery</div>
+                    <div class="mini"><a href="laundry.html" class="tag" style="text-decoration: none;">👕 Laundry services</a>
+                        <div class="muted"></div>
                     </div>
                 </div>
             </div>
@@ -313,6 +316,8 @@
                 <div class="testi">“Found a PG within 2 days. Smooth process.” — Riya</div>
                 <div class="testi">“Mess plans are affordable and tasty.” — Arjun</div>
                 <div class="testi">“Laundry pickup saved my time during exams.” — Meera</div>
+                <div class="testi">“Best website for Students.” — Rahul</div>
+                
             </div>
         </section>
 
@@ -320,7 +325,7 @@
             <div class="contact-grid">
                 <div>
                     <h2>Request a demo</h2>
-                    <p class="muted">Send a quick message and we’ll set up a demo link for the boss.</p>
+                    <p class="muted"><b>Send a quick message and we’ll set up a demo link for the boss.</b></p>
 
                     <form id="demoForm">
                         <input type="text" id="name" placeholder="Your name" required>
@@ -331,9 +336,9 @@
                 </div>
 
                 <div class="contact-info">
-                    <p class="muted">Phone: +91 6201614778</p>
-                    <p class="muted">Address: Bhilai Chhattisgarh, (490023)</p>
-                    <p class="muted">Email: easehub.team@gmail.com</p>
+                    <p class="muted"><b>Phone number:  </b><a href="tel:+916201614778" style="text-decoration: none;">+91 6201614778</a></p>
+                    <p class="muted"><b>Address: Bhilai Chhattisgarh, (490023)</b></p>
+                    <p class="muted"><b>E-mail:  </b><a href="mailto:easehub.team@gmail.com" style="text-decoration: none;">easehub.team@gmail.com</a></p>
                 </div>
             </div>
         </section>
