Uncomment chatbot link in navigation and footer

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
             <nav class="nav-links" id="navLinks">
                 <a href="index.html#home">Home</a>
                 <a href="stay.html">Find Your Stay</a>
+                <!-- <a href="chatbot.html">Chatbot</a> -->
                 <a href="meals.html">Healthy Meals</a>
                 <a href="laundry.html">Laundry</a>
                 <a href="index.html#extra">Extra Services</a>
@@ -356,6 +357,7 @@
                 </div>
             </div>
             <div class="f-right muted">© <span id="yr"></span> EaseHub • Made for Students</div>
+            <a class="tag" style="text-decoration: none;" href="chatbot.html">Chatbot</a>
         </div>
     </footer>
 
