--- a/chatbot.html
+++ b/chatbot.html
@@ -1,81 +1,125 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<style>
-  /* 1. The Floating Button Container */
-  .whatsapp-btn-container {
-    position: fixed;
-    bottom: 25px;
-    right: 25px;
-    z-index: 9999; /* Ensures it stays on top of other content */
-    font-family: Arial, sans-serif;
-  }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us</title>
+    <style>
+        /* 1. Import a clean, modern font */
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap');
 
-  /* 2. The Main Button */
-  .whatsapp-btn {
-    background-color: #25D366; /* Official WhatsApp Green */
-    color: white;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    text-align: center;
-    font-size: 30px;
-    box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    transition: transform 0.3s ease;
-  }
+        /* 2. Page Background Styling */
+        body,
+        html {
+            height: 100%;
+            margin: 0;
+            font-family: 'Poppins', sans-serif;
+            overflow: hidden;
+            /* Prevents scrollbars */
 
-  .whatsapp-btn:hover {
-    transform: scale(1.1); /* Slight zoom on hover */
-    background-color: #128C7E; /* Darker green on hover */
-  }
+            /* Soft, animated gradient background */
+            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
 
-  /* 3. The "Chat with us" Tooltip (Optional) */
-  .whatsapp-tooltip {
-    position: absolute;
-    right: 70px; /* To the left of the button */
-    top: 15px;
-    background-color: white;
-    color: #333;
-    padding: 8px 12px;
-    border-radius: 6px;
-    font-size: 14px;
-    box-shadow: 1px 1px 4px rgba(0,0,0,0.2);
-    white-space: nowrap;
-    opacity: 0; /* Hidden by default */
-    transition: opacity 0.3s;
-    pointer-events: none;
-  }
+            /* Center everything */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
 
-  /* Show tooltip on hover */
-  .whatsapp-btn-container:hover .whatsapp-tooltip {
-    opacity: 1;
-  }
-  
-  /* SVG Icon Styling */
-  .whatsapp-icon {
-    width: 35px;
-    height: 35px;
-    fill: white;
-  }
-</style>
+        @keyframes gradientBG {
+            0% {
+                background-position: 0% 50%;
+            }
+
+            50% {
+                background-position: 100% 50%;
+            }
+
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
+        /* 3. The "Glass" Card */
+        .glass-card {
+            background: rgba(255, 255, 255, 0.25);
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+            backdrop-filter: blur(8px);
+            -webkit-backdrop-filter: blur(8px);
+            border-radius: 20px;
+            border: 1px solid rgba(255, 255, 255, 0.18);
+
+            padding: 50px;
+            text-align: center;
+            color: white;
+            max-width: 90%;
+            width: 400px;
+        }
+
+        /* 4. Text Styling */
+        h1 {
+            font-weight: 300;
+            /* Thin, elegant font weight */
+            font-size: 28px;
+            margin-bottom: 35px;
+            letter-spacing: 1px;
+            line-height: 1.4;
+            text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        /* 5. Button Styling */
+        .chat-btn {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            background-color: white;
+            /* Clean white button */
+            color: #25D366;
+            /* WhatsApp Green Text */
+            padding: 12px 30px;
+            border-radius: 50px;
+            text-decoration: none;
+            font-weight: 600;
+            font-size: 16px;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .chat-btn:hover {
+            transform: translateY(-3px);
+            /* Lift up effect */
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
+            background-color: #f0f0f0;
+        }
+
+        .icon-svg {
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+            fill: #25D366;
+        }
+    </style>
 </head>
+
 <body>
 
-<div class="whatsapp-btn-container">
-    <div class="whatsapp-tooltip">Chat with us on WhatsApp</div>
-    
-    <a href="https://wa.me/916201614778?text=Hello%20I%20am%20interested%20in%20your%20services" 
-       target="_blank" 
-       class="whatsapp-btn">
-       
-       <svg class="whatsapp-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-         <path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-27.9l-6.7-4-69.8 18.3 18.6-68.1-4.4-6.9c-19.2-30.5-29.3-66-29.3-103.1 0-105.7 86.1-191.6 192.1-191.6 51.2 0 99.4 19.9 135.5 56 36.1 36.1 56 84.4 56 135.6 0 105.7-86 191.7-192 191.7z"/>
-       </svg>
-    </a>
-</div>
+    <div class="glass-card">
+        <h1>For more details<br>contact me on WhatsApp</h1>
+
+        <a href="https://wa.me/916201614778?text=Hello%20I%20am%20interested%20in%20details" target="_blank"
+            class="chat-btn">
+
+            <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                <path
+                    d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-27.9l-6.7-4-69.8 18.3 18.6-68.1-4.4-6.9c-19.2-30.5-29.3-66-29.3-103.1 0-105.7 86.1-191.6 192.1-191.6 51.2 0 99.4 19.9 135.5 56 36.1 36.1 56 84.4 56 135.6 0 105.7-86 191.7-192 191.7z" />
+            </svg>
+            Chat Now
+        </a>
+    </div>
+
 </body>
+
 </html>
