--- a/index.html
+++ b/index.html
@@ -425,6 +425,7 @@
             </div>
             <div class="f-right muted">© <span id="yr"></span> EaseHub • Made for Students</div>
             <a class="tag" style="text-decoration: none;" href="chatbot.html">Chatbot</a>
+            <a class="tag" style="text-decoration: none;" href="feedback.html">FEEDBACK</a>
         </div>
     </footer>
 
@@ -707,6 +708,7 @@
         });
     </script>
 <!-- <a href="social.html">social</a> -->
+<!-- <a class="tag" href="feedback.html">FEEDBACK</a> -->
 </body>
 
 </html>
