Change footer link text from 'Chatbot' to 'WhatsApp Services'

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 </div>
             </div>
             <div class="f-right muted">© <span id="yr"></span> EaseHub • Made for Students</div>
-            <a class="tag" style="text-decoration: none;" href="chatbot.html">Chatbot</a>
+            <a class="tag" style="text-decoration: none;" href="chatbot.html">WhatsApp Services</a>
             <a class="tag" style="text-decoration: none;" href="feedback.html">FEEDBACK</a>
         </div>
     </footer>
