Add YouTube video iframe to meals.html

--- a/meals.html
+++ b/meals.html
@@ -245,12 +245,17 @@
     </div>
 
   </main>
-
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/OhQiyyTuzXA?si=C0FbFn0ZmNoAzHOM&autoplay=1&mute=1"
+  title="YouTube video player" frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+</iframe></center>
   <footer class="footer">
     <div class="container f-inner">
       <div class="f-left">
         <div class="mark"><img src="https://image2url.com/images/1763453634014-4471bab2-9fa6-4e58-90ce-f17d59238f33.png"
             width="106" height="106" alt="logo" /></div>
+            
         <div>
           <strong>EaseHub</strong>
           <div class="muted">Student services, simplified</div>
