Bold text in index.html for better visibility
Bolded various text elements to enhance emphasis.

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </div>
                 <div class="brand-text">
                     <div class="brand-title">EaseHub</div>
-                    <div class="brand-sub">Student services, simplified</div>
+                    <div class="brand-sub"><b>Student services, simplified</b></div>
                 </div>
             </div>
 
@@ -174,11 +174,11 @@
             <div class="hero-left container">
                 <div class="badge">New • Student-first</div>
                 <h1>Simplify College Life with <span class="accent">EaseHub</span></h1>
-                <p class="lead">Find PGs, messes, laundry & extra services — all in one trusted student-first platform.
-                    Save time, money and stress.</p>
+                <p class="lead"><b>Find PGs, messes, laundry & extra services — all in one trusted student-first platform.
+                    Save time, money and stress.</b></p>
 
                 <div class="hero-cta">
-                    <a class="btn btn-primary" href="#stay">Get Started</a>
+                    <a class="btn btn-primary" href="#extra">Get Started</a>
                     <a class="btn btn-ghost" href="#contact">Contact Sales</a>
                 </div>
 
@@ -214,7 +214,7 @@
                     alt="PG Stay">
                 <div class="card-body">
                     <h3>🏠 Find Your Stay</h3>
-                    <p class="muted">Verified PGs, flats and hostels with real student reviews and transparent pricing.
+                    <p class="muted"><b>Verified PGs, flats and hostels with real student reviews and transparent pricing.</b>
                     </p>
                     <a href="stay.html" class="tag">See Options</a>
                 </div>
@@ -225,7 +225,7 @@
                     src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSwQreu7JXvm8qdkh5iIVf__nm8XfDSQa9V88LG0W5YBtCH1I-wQb4LSRK2yl_t35gNUECBO1Nz7pQX8GBD7pqiCEKUhxWzD_z7yFIpaqwJCVpOO66aqwCiNRRtE-rS2AU7-plEA=s1360-w1360-h1020-rw">
                 <div class="card-body">
                     <h3>🍱 Healthy Meals</h3>
-                    <p class="muted">Daily mess subscriptions, weekly menus and special student combos at budget prices.
+                    <p class="muted"><b>Daily mess subscriptions, weekly menus and special student combos at budget prices.</b>
                     </p>
                     <a href="meals.html" class="tag">View Menus</a>
                 </div>
@@ -236,7 +236,7 @@
                     alt="laundry image">
                 <div class="card-body">
                     <h3>🧺 Laundry</h3>
-                    <p class="muted">Fast, affordable and convenient laundry services with doorstep pickup & delivery.
+                    <p class="muted"><b>Fast, affordable and convenient laundry services with doorstep pickup & delivery.</b>
                     </p>
                     <a href="laundry.html" class="tag">Schedule Pickup</a>
                 </div>
@@ -567,11 +567,11 @@
                             </div>
                             <div class="cake-form-group">
                                 <label>Password</label>
-                                <input type="password" class="cake-form-input" placeholder="••••••••" required>
+                                <input type="password" class="cake-form-input" placeholder="••••••••••••" required>
                             </div>
                             <div style="display:flex; justify-content:space-between; margin-bottom:15px; font-size:0.9rem;">
                                 <label><input type="checkbox"> Remember me</label>
-                                <a href="#" style="color:#fca311; text-decoration:none;">Forgot Password?</a>
+                                <a href="#" style="color:#fca311; text-decoration:none;"><b>Forgot Password?</b></a>
                             </div>
                             <button type="submit" class="btn-order-confirm">Sign In</button>
                         </form>
