Comment out modal title update in login form

--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
   // ----- LOGIN FORM (modal ke andar banaata hai) -----
   function showLoginForm() {
-    modalTitle.innerText = "WELCOME BACK!";
+    // modalTitle.innerText = "WELCOME BACK!";
     defaultActions.style.display = 'none';
     modalBody.innerHTML = `
       <form onsubmit="handleLogin(event)">
