--- a/meals.html
+++ b/meals.html
@@ -250,7 +250,11 @@
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
 </iframe></center> -->
-
+<center><video width="640" height="360" controls poster="thumbnail.jpg">
+  <source src="videoplayback (1) (1).mp4" type="video/mp4">
+  <source src="videoplayback (1) (1).webm" type="video/webm">
+  Your browser does not support the video tag.
+</video></center>
   
   <footer class="footer">
     <div class="container f-inner">
