--- a/meals.html
+++ b/meals.html
@@ -470,7 +470,7 @@
             <div class="plan-period">Per Month</div>
             
             <div class="btn-group">
-                <button class="btn-plan ${btnClass}">Book Now</button>
+                <button class="btn-plan ${btnClass}"><a href="https://wa.me/916201614778?text=Hello,%20I%20would%20like%20to%20order%20the%20${item.title}%20Plan." style="color: white; text-decoration: none;">Book Now</a></button>
                 <button class="btn-plan ${btnClass}">
                     <a href="https://wa.me/916201614778?text=Hello,%20I%20would%20like%20to%20order%20the%20${item.title}%20Plan." style="color: white; text-decoration: none;">Order Now</a>
                 </button>
