Comment out style and feedback card sections
Commented out the style and feedback card sections in feedback.html.

--- a/feedback.html
+++ b/feedback.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback Form</title>
-    <style>
+    <!-- <style>
         /* General Body Styling (You can remove this part for your site) */
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -110,11 +110,11 @@
         .btn-submit:hover {
             background-color: #45a049;
         }
-    </style>
+    </style> -->
 </head>
 <body>
 
-    <div class="feedback-card">
+    <!-- <div class="feedback-card">
         <h2>We value your feedback</h2>
         
         <form action="YOUR_BACKEND_URL_HERE" method="POST">
@@ -171,7 +171,7 @@
 
             <button type="submit" class="btn-submit">Send Feedback</button>
         </form>
-    </div>
-
+    </div> -->
+<script src="https://sheetdb.io/s/f/2gvwgzotfj7cd.js"></script>
 </body>
 </html>
