Remove demo form input fields and add script

--- a/index.html
+++ b/index.html
@@ -330,10 +330,11 @@
                     <p class="muted"><b>Send a quick message and we’ll set up a demo link for the boss.</b></p>
 
                     <form id="demoForm">
-                        <input type="text" id="name" placeholder="Your name" required>
+                        <!-- <input type="text" id="name" placeholder="Your name" required>
                         <input type="email" id="email" placeholder="Your email" required>
                         <textarea id="message" placeholder="Message (optional)"></textarea>
-                        <button class="btn btn-primary" type="submit">Send Demo Request</button>
+                        <button class="btn btn-primary" type="submit">Send Demo Request</button> -->
+                        <script src="https://sheetdb.io/s/f/lub53lh43ck4j.js"></script>
                     </form>
                 </div>
 
