Update script source in index.html

--- a/index.html
+++ b/index.html
@@ -334,7 +334,8 @@
                         <input type="email" id="email" placeholder="Your email" required>
                         <textarea id="message" placeholder="Message (optional)"></textarea>
                         <button class="btn btn-primary" type="submit">Send Demo Request</button> -->
-                        <script src="https://sheetdb.io/s/f/lub53lh43ck4j.js"></script>
+                        <!-- <script src="https://sheetdb.io/s/f/lub53lh43ck4j.js"></script> -->
+                        <script src="https://sheetdb.io/s/f/tvmhit0iyy464.js"></script>
                     </form>
                 </div>
 
